# trt-inference-yolov5

./: CMakeLists.txt  README.md
include/: config.h  trt_inference.h
src/: main.cpp  postprocess.cpp  trt_inference.cpp
